# controlit_models

./: README.md
atlas_legs_plain/: CMakeLists.txt  mainpage.dox  package.xml
atlas_legs_plain/launch/: gazebo.launch  rviz.launch
atlas_legs_plain/models/: generate_atlas_legs_plain_urdfs.sh
atlas_legs_plain/rviz/: atlas_legs_plain.rviz
atlas_legs_plain/worlds/: atlas_legs_plain.world
atlas_plain/: CMakeLists.txt  mainpage.dox  package.xml
atlas_plain/launch/: gazebo.launch  rviz.launch
atlas_plain/models/: generate_atlas_plain_urdfs.sh
atlas_plain/models/atlas_plain/: model.config
atlas_plain/models/atlas_plain/xacro/: atlas_plain_base.xacro  atlas_plain_with_sandia_hands.xacro  atlas_plain_with_sandia_hands_gazebo.xacro  atlas_plain_with_sandia_hands_linked_to_world.xacro
atlas_plain/models/sandia_hands/xacro/: sandia_hand.gazebo.xacro  sandia_hand.transmission.xacro  sandia_hand.urdf.xacro  sandia_hand_simple_shapes.urdf.xacro
atlas_plain/rviz/: atlas_plain.rviz
atlas_plain/worlds/: atlas_plain.world
atlas_plain_pinned/: CMakeLists.txt  mainpage.dox  package.xml
atlas_plain_pinned/launch/: gazebo.launch  rviz.launch
atlas_plain_pinned/models/: generate_atlas_plain_pinned_urdfs.sh
atlas_plain_pinned/worlds/: atlas_plain_pinned.world
controlit_models/: CMakeLists.txt  package.xml  setup.sh
controlit_models_common/: CMakeLists.txt  package.xml
controlit_models_common/launch/: rviz.xml
controlit_models_common/models/: generic_models.xml
drake_prius/: CMakeLists.txt  package.xml
drake_prius/launch/: rviz.launch
drake_prius/rviz/: drake_prius.rviz
drake_prius_liang/: CMakeLists.txt  package.xml
drake_prius_liang/launch/: rviz.launch
drake_prius_liang/models/drake_prius/: prius.urdf
drake_prius_liang/rviz/: drake_prius_liang.rviz
dreamer/: CMakeLists.txt  package.xml
dreamer/launch/: gazebo.launch  rviz.launch  rwt.launch
dreamer/models/: generate_dreamer_urdfs.sh
dreamer/worlds/: dreamer.world
dreamer_hand/: CMakeLists.txt  mainpage.dox  package.xml
dreamer_hand/launch/: gazebo.launch  rviz.launch
dreamer_hand/models/: generate_dreamer_hand_urdfs.sh
dreamer_hand/rviz/: dreamer_hand.rviz
dreamer_hand/worlds/: dreamer_hand_world.world
dreamer_testbed/: CMakeLists.txt  mainpage.dox  package.xml
dreamer_testbed/launch/: gazebo.launch  rviz.launch
dreamer_testbed/models/: generate_dreamer_testbed.sh
dreamer_testbed/rviz/: dreamer_testbed.rviz
dreamer_testbed/worlds/: dreamer_testbed.world
hcrl_simulator/: .gitignore  CMakeLists.txt  package.xml
hcrl_simulator/gazebo_plugins/src/: PinPlugin.cpp  WrenchMeasurementPlugin.cpp
hcrl_simulator/models/: generic_models.xml
hcrl_simulator/models/hcrl_ground_plane/: model.config  model.sdf
hcrl_simulator/msg/: Wrenches.msg
hcrl_simulator/scripts/: run_gazebo
hume/: CMakeLists.txt  package.xml
hume/launch/: gazebo.launch
hume/models/: generate_hume_urdfs.sh
hume/worlds/: hume_world.world
omni_wheel/: CMakeLists.txt  mainpage.dox  package.xml
omni_wheel/models/: generate_omni_wheel_urdf.sh
omni_wheel/models/omni_wheel/: model.config
omni_wheel/models/omni_wheel/xacro/: omni_wheel.urdf.xacro  omni_wheel.xacro
omni_wheel/worlds/: omni_world.world
stickbot_bipedal_12dof/: CMakeLists.txt  mainpage.dox  package.xml
stickbot_bipedal_12dof/launch/: gazebo.launch  rviz.launch
stickbot_bipedal_12dof/models/: generate_stickbot_bipedal_12dof_urdfs.sh
stickbot_bipedal_12dof/rviz/: stickbot_bipedal_12dof.rviz
stickbot_bipedal_12dof/worlds/: stickbot_bipedal_12dof.world
stickbot_humanoid_32dof/: CMakeLists.txt  mainpage.dox  package.xml
stickbot_humanoid_32dof/launch/: gazebo.launch  rviz.launch
stickbot_humanoid_32dof/models/: generate_stickbot_humanoid_32dof_urdfs.sh
stickbot_humanoid_32dof/rviz/: stickbot_humanoid_32dof.rviz
stickbot_humanoid_32dof/worlds/: stickbot_humanoid_32dof.world
stickbot_humanoid_32dof_pinned/: CMakeLists.txt  mainpage.dox  package.xml
stickbot_humanoid_32dof_pinned/launch/: gazebo.launch  rviz.launch
stickbot_humanoid_32dof_pinned/models/: generate_stickbot_humanoid_32dof_pinned_urdfs.sh
stickbot_humanoid_32dof_pinned/worlds/: stickbot_humanoid_32dof_pinned.world
stickbot_leg_6dof/: CMakeLists.txt  mainpage.dox  package.xml
stickbot_leg_6dof/launch/: gazebo.launch  rviz.launch
stickbot_leg_6dof/models/: generate_stickbot_leg_6dof_urdfs.sh
stickbot_leg_6dof/rviz/: stickbot_leg_6dof.rviz
stickbot_leg_6dof/worlds/: stickbot_leg_6dof.world
stickbot_lowerleg_3dof/: CMakeLists.txt  mainpage.dox  package.xml
stickbot_lowerleg_3dof/html/: stickbot_lowerleg_3dof.html
stickbot_lowerleg_3dof/launch/: gazebo.launch  rviz.launch  rwt.launch
stickbot_lowerleg_3dof/models/: generate_stickbot_lowerleg_3dof_urdfs.sh
stickbot_lowerleg_3dof/rviz/: stickbot_lowerleg_3dof.rviz
stickbot_lowerleg_3dof/worlds/: stickbot_lowerleg_3dof.world
stickbot_upperbody_10dof/: CMakeLists.txt  mainpage.dox  package.xml
stickbot_upperbody_10dof/launch/: gazebo.launch  rviz.launch
stickbot_upperbody_10dof/models/: generate_stickbot_upperbody_10dof_urdfs.sh
stickbot_upperbody_10dof/rviz/: stickbot_upperbody_10dof.rviz
stickbot_upperbody_10dof/worlds/: stickbot_upperbody_10dof.world
trikey/: CMakeLists.txt  mainpage.dox  package.xml
trikey/launch/: gazebo.launch  rviz.launch
trikey/models/: generate_trikey_urdfs.sh
trikey/worlds/: trikey_world.world
trikey_pinned/: CMakeLists.txt  mainpage.dox  package.xml
trikey_pinned/launch/: gazebo.launch  rviz.launch
trikey_pinned/models/: generate_trikey_pinned_urdfs.sh
valkyrie/: CMakeLists.txt  mainpage.dox  package.xml
valkyrie_upperbody/: CMakeLists.txt  mainpage.dox  package.xml
valkyrie_upperbody/launch/: gazebo.launch  rviz.launch
valkyrie_upperbody/models/: generate_valkyrie_upperbody_urdfs.sh
valkyrie_upperbody/models/valkyrie_upperbody/: model.config
valkyrie_upperbody/models/valkyrie_upperbody/xacro/: valkyrie_upperbody_gazebo.xacro  valkyrie_upperbody_rviz.xacro
valkyrie_upperbody/worlds/: valkyrie_upperbody.world
(+98 files in other folders)
