<?xml version="1.0"?>
<package format="2">
	<name>hcrl_simulator</name>

    <version>0.0.0</version>
    
    <description>
       Contains files used in running simulations.
    </description>

    <maintainer email="liangfok@utexas.edu">Chien-Liang Fok</maintainer>

    <author>Chien-Liang Fok</author>
    <author>Gwendolyn Johnson</author>
    <author>J.D. Yamokoski</author>

    <license>LGPLv2.1</license>

    <url>http://ros.org/wiki/hcrl_simulator</url>

    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use exec_depend for packages you need at runtime: -->
    <!--   <exec_depend>message_runtime</exec_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>message_generation</build_depend>

    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>

    <exec_depend>message_runtime</exec_depend>
</package>


